# rs-vst-host

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_COVERAGE.md  Cargo.toml  DESIGN_DOCUMENT.md  DYNAMIC_ANALYSIS.md  ISSUES.md  PRD.md  README.md  STATUS.md  USER_GUIDE.md  USER_INTERACTION_PLAN.md  debug.bash  scan.bash  start.bash  test.bash
.github/workflows/: ci.yml
benches/: audio_engine.rs  cache_serde.rs  diagnostics.rs  event_list.rs  host_alloc.rs  ipc_messages.rs  midi_translate.rs  param_changes.rs  process_buffers.rs  process_context.rs  session_serde.rs
docs/: CHANGELOG.md  CODE_COVERAGE.md  CRASH_REPORT.md  DEBUGGING.md  DESIGN_DOCUMENT.md  DYNAMIC_ANALYSIS.md  FFI_BOUNDARIES.md  MEMORY_ALLOCATION.idea.md  MEMORY_SAFETY_PLAN.md  PERFORMANCE_CHANGELOG.md  PHASE_8.md  PLAN.md  PRD.md  STATUS.md  USER_GUIDE.md
plugins/macos/vst3/Monster.vst3/Contents/: Info.plist  PkgInfo
plugins/macos/vst3/Monster.vst3/Contents/Resources/: moduleinfo.json
plugins/macos/vst3/Monster.vst3/Contents/_CodeSignature/: CodeResources
scripts/: bundle-macos.sh
src/: asan_tests.rs  diagnostics.rs  e2e_tests.rs  error.rs  gui_tests.rs  lib.rs  main.rs  miri_tests.rs
src/app/: cli.rs  commands.rs  config.rs  interactive.rs  mod.rs
src/audio/: delay_line.rs  device.rs  engine.rs  graph.rs  graph_engine.rs  mod.rs  perf.rs
src/gui/: app.rs  audio_worker.rs  backend.rs  editor.rs  gui_worker.rs  ipc.rs  mod.rs  routing.rs  session.rs  supervisor.rs  theme.rs  undo.rs
src/host/: mod.rs
src/ipc/: messages.rs  mod.rs  proxy.rs  shm.rs  worker.rs
src/midi/: device.rs  mod.rs  translate.rs
src/vst3/: cache.rs  cf_bundle.rs  com.rs  component_handler.rs  event_list.rs  host_alloc.rs  host_context.rs  ibstream.rs  instance.rs  mod.rs  module.rs  param_changes.rs  params.rs  plug_frame.rs  presets.rs  process.rs  process_context.rs  sandbox.rs  scanner.rs  types.rs
