[package]
name = "rs-vst-host"
version = "0.1.0"
edition = "2024"

[dependencies]
# CLI framework
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization for plugin cache
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Dynamic library loading
libloading = "0.8"

# Platform directories
dirs = "6"

# Audio I/O
cpal = "0.15"

# MIDI input
midir = "0.10"

# Ctrl+C handling
ctrlc = "3"

# Low-level libc bindings (signal handling for plugin sandboxing)
libc = "0.2"

# GUI framework
eframe = "0.31"
egui = "0.31"
