[package]
name = "rs-vst-host"
version = "0.19.3"
edition = "2024"

[features]
# Heap allocation profiling via dhat
debug-alloc = ["dhat"]
# Chrome trace timeline output
debug-trace = ["tracing-chrome"]
# Both debug-alloc and debug-trace
debug-tools = ["debug-alloc", "debug-trace"]

[dependencies]
# CLI framework
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }

# Serialization for plugin cache
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Dynamic library loading
libloading = "0.8"

# Platform directories
dirs = "6"

# Audio I/O
cpal = "0.15"

# MIDI input
midir = "0.10"

# Ctrl+C handling
ctrlc = "3"

# Low-level libc bindings (signal handling for plugin sandboxing)
libc = "0.2"

# GUI framework
eframe = "0.31"
egui = "0.31"

# Backtrace symbolication (direct dependency; previously only transitive via anyhow)
backtrace = "0.3"

# Optional: heap allocation profiling
dhat = { version = "0.3", optional = true }

# Optional: Chrome trace timeline output
tracing-chrome = { version = "0.7", optional = true }
mimalloc = "0.1.48"

[dev-dependencies]
divan = "0.1"

[[bench]]
name = "audio_engine"
harness = false

[[bench]]
name = "process_buffers"
harness = false

[[bench]]
name = "event_list"
harness = false

[[bench]]
name = "param_changes"
harness = false

[[bench]]
name = "midi_translate"
harness = false

[[bench]]
name = "ipc_messages"
harness = false

[[bench]]
name = "process_context"
harness = false

[[bench]]
name = "host_alloc"
harness = false

[[bench]]
name = "diagnostics"
harness = false

[[bench]]
name = "session_serde"
harness = false

[[bench]]
name = "cache_serde"
harness = false
